Fixed more collapse problems

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -434,7 +434,7 @@ div.separator{
 }
 
 td.multichoice{
-  width: 50%;
+  //width: 50%;
   padding: 5px;
   vertical-align: top;
 }
